--- a/Livraria.Infra.CrossCutting/Livraria.Infra.CrossCutting.csproj
+++ b/Livraria.Infra.CrossCutting/Livraria.Infra.CrossCutting.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Livraria.Infra.Data\Livraria.Infra.Data.csproj" />
+  </ItemGroup>
+
 </Project>
