--- a/Livraria.Infra.Data/Livraria.Infra.Data.csproj
+++ b/Livraria.Infra.Data/Livraria.Infra.Data.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Livraria.Domain\Livraria.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
