--- a/Livraria/Livraria.App/Livraria.App.csproj
+++ b/Livraria/Livraria.App/Livraria.App.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -12,6 +12,12 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Livraria.Domain\Livraria.Domain.csproj" />
+    <ProjectReference Include="..\..\Livraria.Infra.CrossCutting\Livraria.Infra.CrossCutting.csproj" />
+    <ProjectReference Include="..\..\Livraria.Infra.Data\Livraria.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
